...
    <string name="NOTES">NOTES</string>
    <string name="title_note">Title</string>
    <string name="app_name">Melon AI</string>
    <string name="note_title">Untitled Note</string>
    <string name="title_hint">Untitled Note</string>
    <string name="note_hint">Start writing...</string>
    <string name="save_note">Save Note</string>
    <string name="deleteNote">Delete Note</string>
    <string name="title_activity_main_videocall">Sign in</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>

    <string-array name="class_number">
        <item>All</item>
...
